CTA Link icon vert align fix / Post Nav tiny fix

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -511,6 +511,14 @@ a:hover {
 .link-cta.read-more {
   font-size: 19px;
 }
+.link-cta [class*="icon-"] {
+  vertical-align: -5px;
+}
+@media (min-width: 900px) {
+  .link-cta [class*="icon-"] {
+    vertical-align: -2px;
+  }
+}
 
 .form-block {
   margin-bottom: 24px;
@@ -859,13 +867,28 @@ button.btn {
 .post-nav [class*="icon-"] {
   vertical-align: -5px;
 }
-.post-nav .older {
-  float: left;
-  margin-right: 4px;
+@media (max-width: 350px) {
+  .post-nav .older {
+    display: block;
+    text-align: center;
+    margin-bottom: 24px;
+  }
 }
-.post-nav .newer {
-  float: right;
-  margin-left: 4px;
+@media (min-width: 350px) {
+  .post-nav .older {
+    float: left;
+  }
+}
+@media (max-width: 350px) {
+  .post-nav .newer {
+    display: block;
+    text-align: center;
+  }
+}
+@media (min-width: 350px) {
+  .post-nav .newer {
+    float: right;
+  }
 }
 
 .info-grid {
