--- a/assets/sass/global/_buttons.scss
+++ b/assets/sass/global/_buttons.scss
@@ -65,4 +65,12 @@ a {
   &.read-more {
     font-size: 19px;
   }
+  
+  [class*="icon-"] {
+    vertical-align: -5px;
+
+    @include bp-min-width($large) {
+      vertical-align: -2px;
+    }
+  }
 }
